fix case study scrollbar

--- a/style.css
+++ b/style.css
@@ -550,19 +550,22 @@ header {
   /* flex-wrap: wrap; */
 }
 
-.skills::-webkit-scrollbar {
+.skills::-webkit-scrollbar,
+.case-mini-details::-webkit-scrollbar {
   width: 10px;
   height: 10px;
   background-color: transparent;
 }
 
-.skills::-webkit-scrollbar-thumb {
+.skills::-webkit-scrollbar-thumb,
+.case-mini-details::-webkit-scrollbar-thumb {
   /* background-color: rgba(255, 255, 255, 0.5); */
   background-color: var(--light-pink);
   border-radius: 5px;
 }
 
-.skills::-webkit-scrollbar-thumb:hover {
+.skills::-webkit-scrollbar-thumb:hover,
+.case-mini-details::-webkit-scrollbar-thumb:hover {
   background-color: var(--pink);
   /* background-color: rgba(255, 255, 255, 0.8); */
 }
